# moodle.py

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
moodle/: calendar.py  moodle.py  siteinfo.py
src/moodle/: __init__.py  calendar.py  course.py  modulebase.py  moodle.py  resources.py  siteinfo.py  util.py
