[metadata]
name = moodle-mobile-py
version = 1.0.2
author = xImAnton_
author_email = admin@ximanton.de
description = A Python Wrapper for the Moodle Mobile API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xImAnton/moodle.py
project_urls =
    Bug Tracker = https://github.com/xImAnton/moodle.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiofiles==0.8.0
    aiohttp==3.8.1

[options.packages.find]
where = src
